--- a/statistics/Vanilla/played.yml
+++ b/statistics/Vanilla/played.yml
@@ -25,14 +25,14 @@
 # 
 # -----------------------------------------
 force-update: false
-online-only: true
+online-only: false
 enable-commas: true
 all-time:
   sign-lines:
-  - '&c&m------------'
-  - '&a{name}'
-  - '&e{amount}'
-  - '&c&m------------'
+  - '&4Time Played'
+  - '&1Rank: {rank}'
+  - '&0{name}'
+  - '&2Level: {amount}'
   update-interval: 30
   menu-enabled: true
   menu-command: /topplayed
