--- a/statistics/Vanilla/cake.yml
+++ b/statistics/Vanilla/cake.yml
@@ -32,7 +32,7 @@ all-time:
   - '&4Cake Eaten'
   - '&1Rank: {rank}'
   - '&0{name}'
-  - '&2{amount}'
+  - '&2{amount} slices'
   update-interval: 30
   menu-enabled: true
   menu-command: /topcake
