--- a/statistics/Vanilla/played.yml
+++ b/statistics/Vanilla/played.yml
@@ -32,7 +32,7 @@ all-time:
   - '&4Time Played'
   - '&1Rank: {rank}'
   - '&0{name}'
-  - '&2Level: {amount}'
+  - '&2{amount}'
   update-interval: 30
   menu-enabled: true
   menu-command: /topplayed
