--- a/statistics/Vanilla/kills.yml
+++ b/statistics/Vanilla/kills.yml
@@ -25,14 +25,14 @@
 # 
 # -----------------------------------------
 force-update: false
-online-only: true
+online-only: false
 enable-commas: true
 all-time:
   sign-lines:
-  - '&c&m------------'
-  - '&a{name}'
-  - '&e{amount} kills'
-  - '&c&m------------'
+  - '&4Player Kills'
+  - '&1Rank: {rank}'
+  - '&0{name}'
+  - '&2{amount} kills'
   update-interval: 30
   menu-enabled: true
   menu-command: /topkills
