--- a/statistics/VoteRoulette/vr-total.yml
+++ b/statistics/VoteRoulette/vr-total.yml
@@ -25,16 +25,16 @@
 # 
 # -----------------------------------------
 force-update: false
-online-only: true
+online-only: false
 enable-commas: true
 all-time:
   sign-lines:
-  - '&c&m------------'
-  - '&a{name}'
-  - '&e{amount} votes'
-  - '&c&m------------'
+  - '&4Total Votes'
+  - '&1Rank: {rank}'
+  - '&0{name}'
+  - '&2{amount} votes'
   update-interval: 30
-  menu-enabled: true
+  menu-enabled: false
   menu-command: /topvoters
   menu-size: 90
   menu-name: '&4Top Voters Page {page}'
