--- a/statistics/mcMMO/mcmmo-power.yml
+++ b/statistics/mcMMO/mcmmo-power.yml
@@ -25,16 +25,16 @@
 # 
 # -----------------------------------------
 force-update: false
-online-only: true
+online-only: false
 enable-commas: true
 all-time:
   sign-lines:
-  - '&c&m------------'
-  - '&a{name}'
-  - '&e{amount} power'
-  - '&c&m------------'
+  - '&4Power Level'
+  - '&1Rank: {rank}'
+  - '&0{name}'
+  - '&2Level: {amount}'
   update-interval: 30
-  menu-enabled: true
+  menu-enabled: false
   menu-command: /topmcmmopower
   menu-size: 90
   menu-name: '&4Top mcMMO power Page {page}'
