--- a/statistics/mcMMO/mcmmo-power.yml
+++ b/statistics/mcMMO/mcmmo-power.yml
@@ -34,7 +34,7 @@ all-time:
   - '&0{name}'
   - '&1Level: {amount}'
   update-interval: 30
-  menu-enabled: false
+  menu-enabled: true
   menu-command: /topmcmmopower
   menu-size: 90
   menu-name: '&4Top mcMMO power Page {page}'
