--- a/statistics/mcMMO/mmol-unarmed.yml
+++ b/statistics/mcMMO/mmol-unarmed.yml
@@ -34,7 +34,7 @@ all-time:
   - '&0{name}'
   - '&1Level: {amount}'
   update-interval: 30
-  menu-enabled: false
+  menu-enabled: true
   menu-command: /topunarmedlevel
   menu-size: 90
   menu-name: '&4Top Unarmed Level Page {page}'
