--- a/statistics/mcMMO/mmol-woodcutting.yml
+++ b/statistics/mcMMO/mmol-woodcutting.yml
@@ -34,7 +34,7 @@ all-time:
   - '&0{name}'
   - '&1Level: {amount}'
   update-interval: 30
-  menu-enabled: false
+  menu-enabled: true
   menu-command: /topwoodcuttinglevel
   menu-size: 90
   menu-name: '&4Top Woodcutting Level Page {page}'
